--- a/WebApplication4/WebApplication4/TicknetPrototipo.csproj
+++ b/WebApplication4/WebApplication4/TicknetPrototipo.csproj
@@ -234,6 +234,9 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\DatosGeneralesModel.cs" />
+    <Compile Include="Models\DetalleVenta.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Evento2Model.cs" />
     <Compile Include="Models\EventoModel.cs" />
     <Compile Include="Models\Eventos.cs">
