--- a/WebApplication4/WebApplication4/TicknetPrototipo.csproj
+++ b/WebApplication4/WebApplication4/TicknetPrototipo.csproj
@@ -554,6 +554,7 @@
     <Content Include="Views\Ventas\Detalles.cshtml" />
     <Content Include="Views\CuentaUsuario\ModificarDatos.cshtml" />
     <Content Include="Views\CuentaUsuario\CambiarCorreo.cshtml" />
+    <Content Include="Views\CuentaUsuario\CambiarContrasena.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
