--- a/WebApplication4/WebApplication4/TicknetPrototipo.csproj
+++ b/WebApplication4/WebApplication4/TicknetPrototipo.csproj
@@ -229,6 +229,7 @@
     <Compile Include="Models\Comentarios.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ComprarEntradaModel.cs" />
     <Compile Include="Models\CuentaUsuario.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -556,6 +557,7 @@
     <Content Include="Views\CuentaUsuario\CambiarCorreo.cshtml" />
     <Content Include="Views\CuentaUsuario\CambiarContrasena.cshtml" />
     <Content Include="Views\CuentaUsuario\RegistrarUsuarioVendedor.cshtml" />
+    <Content Include="Views\CuentaUsuario\ComprarEntrada.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
