--- a/WebApplication4/WebApplication4/bin/WebApplication4.dll.config
+++ b/WebApplication4/WebApplication4/bin/WebApplication4.dll.config
@@ -20,7 +20,10 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
-    <customErrors mode="Off" />
+    <customErrors mode="On">
+      <error statusCode="404" redirect="Error/Index"/>
+      <error statusCode="403" redirect="Error/Error403"/>
+    </customErrors>
   </system.web>
   <system.webServer>
     <modules>
