--- a/WebApplication4/WebApplication4/TicknetPrototipo.csproj
+++ b/WebApplication4/WebApplication4/TicknetPrototipo.csproj
@@ -186,6 +186,7 @@
     <Compile Include="Controllers\CategoriaController.cs" />
     <Compile Include="Controllers\CuentaUsuarioController.cs" />
     <Compile Include="Controllers\EmpleadoController.cs" />
+    <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\EventoController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LocalController.cs" />
@@ -222,10 +223,13 @@
     </Compile>
     <Compile Include="Models\BloqueDeTIempoModel.cs" />
     <Compile Include="Models\CancelarModel.cs" />
+    <Compile Include="Models\CarritoItem.cs" />
     <Compile Include="Models\Categoria.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\CategoriaModel.cs" />
+    <Compile Include="Models\Coment.cs" />
+    <Compile Include="Models\Comentario.cs" />
     <Compile Include="Models\Comentarios.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -257,6 +261,9 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\FuncionesModel.cs" />
+    <Compile Include="Models\HoraReserva.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Local.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -561,6 +568,10 @@
     <Content Include="Views\CuentaUsuario\CambiarContrasena.cshtml" />
     <Content Include="Views\CuentaUsuario\RegistrarUsuarioVendedor.cshtml" />
     <Content Include="Views\CuentaUsuario\ComprarEntrada.cshtml" />
+    <Content Include="Views\Error\Error403.cshtml" />
+    <Content Include="Views\Error\General.cshtml" />
+    <Content Include="Views\Error\Index.cshtml" />
+    <Content Include="Views\Ventas\PagoOrganizador.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
