--- a/WebApplication4/WebApplication4/TicknetPrototipo.csproj
+++ b/WebApplication4/WebApplication4/TicknetPrototipo.csproj
@@ -321,6 +321,7 @@
     </Compile>
     <Compile Include="Models\RegistarEventoModel.cs" />
     <Compile Include="Models\RequireRequestValueAttribute.cs" />
+    <Compile Include="Models\Subcategoria.cs" />
     <Compile Include="Models\TarifaModel.cs" />
     <Compile Include="Models\Tarjeta.cs">
       <DependentUpon>Model1.tt</DependentUpon>
